--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cobe": "^0.6.5",
+    "framer-motion": "^12.24.7",
     "katex": "^0.16.27",
     "lucide-react": "^0.562.0",
     "notion-client": "^7.7.3",
